<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">3S</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_api_key"><key></string>
    <string name="title_activity_maps">Map</string>

    <string-array name="nav_drawer_items">
        <item>Karte</item>
        <item>Quests</item>
        <item>Rangliste</item>
        <item>Einstellungen</item>
        <item>Logout</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_explore_grey600_24dp</item>
        <item>@drawable/ic_assignment_late_grey600_24dp</item>
        <item>@drawable/ic_assessment_grey600_24dp</item>
        <item>@drawable/ic_settings_applications_grey600_24dp</item>
        <item>@drawable/ic_settings_power_grey600_24dp</item>
    </array>
    <array name="geschlechter">
        <item>Keine Angabe</item>
        <item>Männlich</item>
        <item>Weiblich</item>
    </array>

    <string name="title_activity_fading_action_bar"></string>
    <string name="title_activity_fraction_chooser">Fraktionsauswahl</string>
    <string name="active">Aktive</string>
    <string name="open">Offene</string>
    <string name="history">Historie</string>
    <string name="loading_quests">Lade Quests...</string>
    <string name="quests_loading_active_error">Fehler beim Laden der aktiven Quests</string>
    <string name="quests_no_active_found">Keine aktiven Quests gefunden</string>
    <string name="quest_loading_history_error">Fehler beim Laden der Questhistorie</string>
    <string name="quest_no_history_found">Keine Questhistorie gefunden</string>
    <string name="quests_loading_open_error">Fehler beim Laden der offenen Quests</string>
    <string name="quest_open_no_found">Keine offenen Quests gefunden</string>
    <string name="quest_error_change_state">"Fehler beim verändern des Zustands von Quest "</string>
    <string name="invalid_login_credentials">Falsche Logininformationen. Überprüfen Sie bitte Username und Passwort!</string>
    <string name="error_downloading_config">Fehler beim Herunterladen der Konfigurationsdateien</string>
    <string name="dialog_bluetooth_title">Bluetoothaktivierung</string>
    <string name="activate">Aktivieren</string>
    <string name="activate_bluetooth_dialog_text">Aktivieren Sie Bluetooth um die App in ihrem vollen Funktionsumfang verwenden zu können!</string>
    <string name="cancel">Abbrechen</string>
    <string name="missing_wlan_connection">WLAN-Verbindung fehlt</string>
    <string name="activate_wlan_dialog_text">Aktivieren Sie WLAN um die App in ihrem vollen Funktionsumfang verwenden zu können!</string>
    <string name="ok">OK</string>
    <string name="error_loading_message">Fehler beim Laden der Nachricht</string>
    <string name="error_loading_webelement">Fehler beim Laden des Storyelements</string>
    <string name="error_loading_fraction_list">Fehler beim Laden der Fraktionsliste</string>
    <string name="dialog_fractionchooser_title">Bestätige deine Fraktionswahl</string>
    <string name="accept">Annehmen</string>
    <string name="you_have">"Sie haben "</string>
    <string name="choosen_sure">" gewählt! Sind Sie sich sicher?"</string>
    <string name="error_saving_userdata">Fehler beim Speichern der Nutzerdaten</string>
    <string name="error_loading_locationdata">Fehler beim Laden der Ortsdaten</string>
    <string name="story">Geschichte</string>
    <string name="info">Information</string>
    <string name="loading">Laden...</string>
    <string name="error_saving_image">Fehler beim Speichern des Bildes</string>
    <string name="questlist_title">Questliste</string>
    <string name="highscore_title">Rangliste</string>
    <string name="points">Punkte</string>
    <string name="energy">Energie</string>
    <string name="unknown">Unknown</string>
    <string name="error_loading_fractions">Fehler beim Laden der Fraktionsinformationen</string>
    <string name="jobs">Aufgaben</string>
    <string name="error">Fehler</string>
    <string name="success">Erfolg</string>
    <string name="back">Zurück</string>
    <string name="out_of_range">Außer Reichweite</string>
    <string name="conquer">Eroberung</string>
    <string name="defend">Verteidigung</string>
    <string name="attack">Angriff</string>
    <string name="loading_job_infos">Lade erforderliche Informationen für Job</string>
    <string name="loading_story_infos">Lade erforderliche Informationen für Geschichte</string>
    <string name="error_loading_informations">Fehler beim Laden der benötigten Informationen</string>
    <string name="please_enter_code">Bitte Code eingeben:</string>
    <string name="player">Spieler</string>
    <string name="fractions">Fraktionen</string>
    <string name="error_loading_userhighscore">Fehler beim Laden der Userrangliste!</string>
    <string name="no_data_found">Keine Daten gefunden</string>
    <string name="error_loading_fractionhighscore">Fehler beim Laden der Fraktionsrangliste</string>
    <string name="no_jobs_in_quest">Keine Jobs in dieser Quest</string>
    <string name="error_loading_overlays">Fehler beim Laden der Grundrisse</string>
    <string name="error_loading_mapinformation">Fehler beim Laden der Mapinformationen</string>
    <string name="uncancel">Uncancel</string>
    <string name="filter_cancel_quests">Filter abgebrochene Quests</string>
    <string name="show_cancelled_quests">Abgebrochene Quests anzeigen</string>
    <string name="error_loading_quest">Fehler beim Laden der Questinformationen</string>

    <string name="feedback">Feedback</string>
    <string name="send_feedback">Versende Feedback als Mail</string>
    <string name="select_mail_app">Wählen Sie eine Mailapplikation aus.</string>
    <string name="developer_mail">benedikt.kusemann@gmail.com</string>
    <string name="developer_name">Benedikt Kusemann</string>
    <string name="versionname">Version 1.0</string>
    <string name="version_now">Aktuelle Version</string>
    <string name="about">Über die App</string>
    <string name="open_source_title">Open Source Bibliotheken</string>
    <string name="open_source_summary">Lizenzen der verwendeten Open Source Bibliotheken</string>
    <string name="developer">Entwickler</string>
    <string name="push">Push</string>
    <string name="push_summary">Aktivieren sie Push um über Neuigkeiten informiert zu werden</string>
    <string name="settings">Einstellungen</string>
    <string name="key_developer_pref">sp_developer</string>
    <string name="key_thirdparties_prefs">sp_thirdparties</string>
    <string name="key_feedback_prefs">sp_feedback</string>
    <string name="key_push_sp">sp_push_enabled</string>
    <string name="error_activating_push">Fehler beim Aktivieren von Push</string>
    <string name="error_unsubscribing_push">Fehler beim Deaktivieren von Push</string>
</resources>
